--- a/style.css
+++ b/style.css
@@ -1,78 +1,85 @@
 * {
-    box-sizing: border-box;
+    box-sizing:border-box;
     text-align: center;
-  }
- body {
-    width: 960px;
-    position: relative;
-    left: 500px;
+}
+body {
     font-family: Arial, Helvetica, sans-serif;
+    width: 960px;
+    position:relative;
+    left:300px;
     font-size: 18px;
+    background: #777;
     color: #777;
-    background: #777;    
 }
- 
-header {       
-    padding: 30px;
+
+header, nav, section, aside, footer {
+    background: #ebebeb;
+}
+
+header {
+    padding:30px;
     margin-bottom: 10px;
-    background: #ebebeb;     
+    height: 75px;
 }
- 
-nav {       
-    padding: 30px;
+
+nav {
+    padding:30px;
     margin-bottom: 20px;
-    background: #ebebeb;
+    height: 75px;
 }
- 
-#left {       
-    padding: 10px;
+
+section {
+    padding: 20px;
     margin-bottom: 20px;
-    border: 3px solid #ebebeb;
+    border: 4px solid;
     float: left;
-    width: 495px;
+    width: 450px;
     height: 350px;
+    clear: both;  
+    
+}
+
+aside {
+    padding: 20px;
+    margin-bottom:20px;
+    width: 450px;
+    border: 4px solid;
+    float: right;
+    height: 350px;
+    
+}
+
+section, aside {
+    width: 480px;
+    
+}
+
+p {
+    padding:30px;
+    margin-bottom: 20px;
+  
+}
+
+h1, h2, h3, p {
+    padding:30px;
     background: #ebebeb;
-    clear: both;    
+    color: #777;
+    height: 75px;
+    margin-bottom: 20px;
 }
 
 article {
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 20px;
-    margin-top: 30px;
-    border: 1px solid #777;
-    height: 275px;
     color: #ebebeb;
-    background: #777;   
- }
-
- #h1 {   
-    padding: 20px;
-    font-weight: bold;
-    position: relative;
-    bottom: -80px;    
-    color: #777;
-    background: #ebebeb;
- }
-
- p { 
-    padding: 20px;
-    position: relative;
-    bottom: -70px;
-    background: #ebebeb;
-    color: #777;   
+    background: #777;
 }
 
-#right {
-    padding: 20px;
-    width: 450px;
-    border: 3px solid #ebebeb;
-    float: right;
-    height: 350px;
-    background: #ebebeb;
-}
-
-footer { 
-    padding: 30px;
-    width: 960px;
+footer {
+    padding:30px;
+    margin-bottom: 20px;
     clear: both;
-    background: #ebebeb;
+    height: 75px;
 }
